--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,11 +12,15 @@
 
 html,
 body {
+  height: 100%;
   max-width: 100vw;
   overflow-x: hidden;
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
@@ -33,6 +37,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+main {
+  flex: 1 0 auto;
 }
 
 @media (prefers-color-scheme: dark) {
